--- a/meanshift/report/report.tex
+++ b/meanshift/report/report.tex
@@ -13,51 +13,6 @@
 \newcommand{\ds}{\displaystyle}
 \newcommand{\ra}{\rightarrow}
 
-%% To complete this course you must pass the exam and hand in a report
-%% describing the work you did for this lab. Together with this report
-%% you'll hand in your code and some illustrative result videos and still
-%% images. Instead of mailing multi-gigabyte video documents, you should
-%% put them somewhere in your web site (public_html) and  the link to me.
-%%
-%% Note that the most important part is to implement the tracker in a correct
-%% way. After you made sure your implementation is correct, try the tracker on
-%% a video in a different domain (search on the internet to find a good video
-%% or create your own video). Keep in mind that when looking for a suitable
-%% video, the goal is not to show how good the tracker works, but try to put
-%% your finger on the strong and weak parts of the algorithm. After you analyzed
-%% these strong and weak points of the algorithm, try to come up with suggestions
-%% to improve your design. If there is still enough time, you can implement one
-%% or more of your suggestions and analyze the results (for instance, how does
-%% your improvement compare to the original algorithm with respect to the weak
-%% as well as the strong parts of the original algorithm). If you run out of
-%% time, you can describe how you would change the design and explain your
-%% expectations of this change. 
-%%
-%%
-%% The report should be about 10 pages long. This should be long enough
-%% to give a thorough description of your work, including introduction,
-%% conclusions and a discussion. In a paper-style report, the introduction
-%% would consist of a problem description (object tracking) and some related
-%% work (mention some approaches taken by other researchers, you can use
-%% the reader for this or look some up yourself). Then, give an outline
-%% of the approach that you have taken (mean-shift and color histograms).
-%% Describe the used algorithm and features in you own words. In the next
-%% sections, you can write about your implementation and the experimental
-%% results. Make sure to mention all relevent issues that you have done
-%% and why. For instance, make mention of your approach to color, which
-%% color model and why. When writing this part, keep in mind that a reader
-%% should be able to reproduce your results by using the information in this
-%% report. After that, give a detailed report of the results of your tracker,
-%% including graphs and screenshots. In the final section(s), you can give a
-%% discussion of your results, in which you can comment on the tracking results
-%% and introduce improvements that you have thought of. Furthermore, describe
-%% what the effects of your improvement are, or, for lack of time, describe
-%% what you expect the effects of the proposed improvements would be. Mention
-%% things like processing speed (and possible improvements), the handling of
-%% different domains (is one general solution possible, should the tracker be
-%% adapted for each domain, how will the adaptation be done, etc.). Don't forget
-%% to include your references at the end, and cite your sources in the text.
-
 \begin{document}
 	\maketitle
 
@@ -106,43 +61,6 @@
 		whose Bhattacharyya distance to the target's histogram representation
 		is smallest.
 		\\ \\
-		%% The mean-shift tracker is a special case of the kernel-based tracker.
-		%% Instead of doing a brute force search of all surrounding pixels, a gradient
-		%% method is used to efficiently move towards the new position of the target.
-		%% The new position of the target will of course be the positions of the candidate
-		%% histogram with the smallest distance from the target. But we won't calculate
-		%% the distance for all pixel positions, we will do it in an iterative fashion,
-		%% starting from the last known position.
-		%% KOEN:
-		%% The mean-shift algorithm requires that we use a certain class of kernels for
-		%% our kernel based histograms, only for this class the algorithm has been proved
-		%% to converge (in most cases). So we need to calculate the Epanechnikov kernel.
-		%% The formula is in the paper, but you will need these constants: $d = 2, c_d = \pi$.
-		%% In my implementation I calculate the kernel beforehand and store the values in a
-		%% matrix the size of the target region. This way I can look up the weight of a pixel
-		%% with one look in the kernel matrix.
-		%% The mean-shift step looks quite complicated, but is essentially easy to implement,
-		%% once you know what is going on. It calculates the step that has to be taken from
-		%% the current position towards the new position. The next step in the mean-shift
-		%% algorithm is a little trick to compensate for too large mean-shift steps. Occasionally
-		%% the calculated step is too large, the next step would of course move (back) towards
-		%% the optimal position, but mean-shift calculations are expensive. Therefore it is
-		%% efficient to correct for the overshoot and this step does just that. It picks a
-		%% point between the previously and newly calculated position and sees if that point
-		%% is a better match (compare histograms) than the calculated position. If it is the
-		%% position half-way is chosen and the process is repeated. This will correct overshoot
-		%% without needing another mean-shift step.
-		%% \\ \\
-		%% The basis of the mean-shift tracker is a kernel-based histogram creation function.
-		%% You will need to implement this. This function takes a position or offset as parameter
-		%% and will then calculate the histogram for an area of width x height pixels. This means
-		%% finding the proper bin for each pixel and looking up the weight from the kernel function
-		%% (see Lab 8), this weight is then added to the calculated bin. This function needs to be
-		%% completed before you can start on the mean-shift tracker. Note: these kernel weights
-		%% mentioned here are values of the kernel function k(). Assuming that this weight is w
-		%% would be a mistake.
-		%% \\ \\
-		%%
 		In the tracking phase we calculate the kernel-based histogram for the target during
 		each frame $f$. Then for each new frame we calculate the \textit{candidate} histogram
 		centered at the target's last known position. A combination of equations $10$ and $13$
@@ -159,29 +77,6 @@
 		\verb|MATLAB| implementation and issues we encountered. We evaluate our tracker and present
 		results in section $4$, and conclude in section $5$. Finally, section $6$ offers some directions
 		for future work.
-		%%
-		%% After performing this formula, you have the mean-shift, the amount you need to adapt your
-		%% position to move closer to the target. The following step in the paper is sort of a hack
-		%% to compensate for too large shifts. The algorithm sometimes calculates a step that will
-		%% move beyond the target. Subsequent mean-shift steps will lead to the optimal position,
-		%% but it is computationally cheaper to solve this in another way: See if the position halfway
-		%% between the calculated new position and the original position is a better match (Bhattacharyya),
-		%% if it is: take this position as new position and repeat.
-		%% \\ \\
-		%% One final issue regarding the processing of the frames is this. In lab 6, I gave a little
-		%% piece of code to read the frames subsequently. The whole idea of tracking is, that you try
-		%% to track a player in MULTIPLE frames. So, do not stop after one or two frames, but see how
-		%% your algorithm handles several frames in a row. Ideally, you would process all subsequent
-		%% frames, but if this takes too long, you could consider to skip some (one or two) frames
-		%% after processing a frame, eg. after processing frame x, continue with frame (x+1); however,
-		%% if it takes too long, then skip frame (x+1) and continue with frame (x+2). However, please
-		%% keep in mind that tracking does not stop after one frame! See what happens if you track a
-		%% player over several seconds of video.
-		%% \\ \\
-		%% After processing the frames, it would be nice to see the results of your tracking algorithm.
-		%% You can do this by painting a rectangle in a frame on the new position and write this image
-		%% to disk. However, Matlab also provides the possibility to create an avifile from your frames.
-		%% The matlab-function to do this is called \verb|avifile|. 
 
 	\section{Theoretical Background}
 		Two components can be distinguished in a tracker; the \textit{Object Model}
@@ -189,7 +84,6 @@
 		representing the type of object to be tracked up from the individual pixels,
 		while the second deals with the high-level task of filtering to describe object
 		motion.
-		FIXME: TOO VAGUE?
 		In abstract terms, this process of filtering can be modelled as a discrete-time
 		dynamical system through the well known state-space approach. Each state $x_k$
 		(for $k=0, 1, ...$) characterizes the relevant information about the tracked
@@ -241,29 +135,23 @@
 		choice of $n$ depends on the number of members in $a$ and $b$; too few partitions
 		will incur loss of accuracy by over-estimating the region of overlap, while too many
 		will also reduce the accuracy due to under-estimation. From $\rho$, the Bhattacharyya
-		\textit{distance} is determined by $d = \sqrt{1 - \rho[p, q]}$.
-		%% This is better than straight Euclidean distance because of FIXME.
+		\textit{distance} is $d = \sqrt{1 - \rho[p, q]}$.
 
 
 	\section{Implementation}
 		The core of the implementation of the tracker follows the algorithm described
 		in \cite{KBOT} closely, but with some small changes.
 		\\ \\
-		%% We implement the Epanechnikov weight-function by pre-calculating a 2D
-		% table of kernel values equal in size to the target region, which stores
-		%% the weight for each relative pixel position. We add the weight per pixel
-		%% to the corresponding histogram bin via a single lookup into this table.
-		%% NOTE: DOES THE CODE ACTUALLY DO THIS?
-		The target model is represented by a kernel-weighted histogram. We implement
-		the Epanechnikov weight-function by pre-calculating a 2D table of kernel values
-		equal in size to the target region which stores the weight for each relative pixel
+		The target model is represented by a kernel-weighted histogram. We implement the
+		Epanechnikov weight-function by pre-calculating a 2D table of kernel values equal
+		in size to the target region which stores the weight for each relative pixel
 		position. We add the weight per pixel to the corresponding histogram bin via a single
 		lookup into this table. The target region is scaled to unit height and width as well
 		as any future candidate region, therefore the kernel needs to be calculated only once
 		beforehand.
 		\\ \\
 		The weights needed to calculate the eventual shift are given by equation ($10$)
-		from \cite{KBOT} and can be calculated at once using a back projection approach.
+		from \cite{KBOT} and can be calculated at once using a back-projection approach.
 		By calculating $H=\sqrt{\frac{M}{H_0}}$, where $M$ is the target model and $H_0$
 		is the candidate histogram, the weights are stored in a histogram. Now it is
 		possible to use back-projection on this new histogram $H$ and the image patch
@@ -350,8 +238,8 @@
 			Figure \ref{fig:CORAL} illustrates this as well.
 			\\ \\
 			We evaluate our tracker in the \verb|RGB|, \verb|rgb|, \verb|HSV|, and
-			\verb|OSC| spaces. The object model is then a $2D$ (\verb|rgb|) or $3D$
-			(\verb|RGB|, \verb|HSV|, \verb|OSC|) histogram respectively. The number
+			\verb|OCS| spaces. The object model is then a $2D$ (\verb|rgb|) or $3D$
+			(\verb|RGB|, \verb|HSV|, \verb|OCS|) histogram respectively. The number
 			of bins per histogram is not a function of the number of dimensions, ie.
 			each dimension contains $N^{\frac{1}{d}}$ bins ($d \in \{2, 3\}$) of width
 			$16$ where $N$ is the total bin-count. For a detailed overview of the various
@@ -376,10 +264,6 @@
 		%% coefficient is determined by $\rho[p, q] = \int \sqrt{p(u) \cdot q(u) } \delta u$,
 		%% then the Bhattacharyya distance is determined from this by $d = \sqrt{1 - \rho[p, q]}$.
 		%%
-		%% LaTeX is the typesetting system, which has (amongst others) the two compilers
-		%% latex and pdflatex. The first one produces DVI output, the second has PDF as
-		%% output format. latex only accepts PS/EPS files for graphics inclusion. pdflatex
-		%% accepts JPG, PNG and finally PDF format.
 		\begin{figure}[H]
 			\begin{center}
 				\includegraphics[width=8cm]{img/cs_RGB.eps}\\
@@ -398,12 +282,6 @@
 		\end{figure}
 
 	\section{Evaluation and Results}
-		%% KOEN: If you think your tracker is finished, you can think about how to evaluate
-		%% the performance of your tracker. Further, you can think about the strong and
-		%% weak parts of your tracker, and propose possible improvements. If there is
-		%% enough time, you can implement one or more of your proposed improvements and
-		%% analyse the effect compared to the original tracker.
-		%% \\ \\
 		%% Once you think you completed the mean-shift tracker, it is time to test your
 		%% implementations on videos from different domains and analyze the performance
 		%% of different color spaces. What are the advantages and disadvantages of certain
@@ -412,19 +290,6 @@
 		%% involves a thorough analysis of your current version, including an analysis of
 		%% the strong and weak points. If you know when your tracker goes wrong, you can
 		%% think of possible solutions to overcome these difficulties.
-		%% \\ \\
-		%% However, first think about how to evaluate the performance of your tracker. It
-		%% would be nice to show some quantitative results in your report, instead of pointing
-		%% at the videos and stating ``Look, it works!''. Several options exist, some more
-		%% time-consuming than others. Come talk to me if you have no clue on how to proceed
-		%% with this.
-		%% \\ \\
-		%% If you finished your tracker, and thought about how to evaluate it, then it is
-		%% time to test your tracker on videos from different domains. For this, you can
-		%% use the Internet to download videos or capture your own. For the conversion of
-		%% your videos into frames, I suggest you use the linux-program mplayer. Matlab can
-		%% also handle video-files, but you will get memory problems if you use videos that
-		%% are longer than a couple of seconds.
 		%% \\ \\
 		%% Note that the most important part is to implement the tracker in a correct way.
 		%% After you made sure your implementation is correct, try the tracker on a video
@@ -438,35 +303,35 @@
 		%% with respect to the weak as well as the strong parts of the original algorithm). If
 		%% you run out of time, you can describe how you would change the design and explain your
 		%% expectations of this change.
-		Evaluation of the tracker is not a trivial task where we are provided with a ground-truth
+		Evaluation of the tracker is not a trivial task even if we are provided with a ground-truth
 		to use for measuring the performance of the tracker. Since we are interested in the various
 		pros and cons of the tracker we conducted experiments on several domains. For our experiments
 		we chose three different domains: sport, urban and nature. For each of these domains we use
 		two different environments within the domain and conduct a tracking experiment for each color
 		space described earlier. To test the robustness on these domains we do need some constraints
 		within the videos themselves. The most important constraint is that the target is not fully
-		occluded during tracking, since the tracker cannot handle this in our implementation. Another
-		important constraint to the videos is that there should not be any cuts to different cameras
-		in the movie when tracking the object. Since mean-shift tracks the object from frame to frame,
-		it cannot handle tracking objects that appear in totally different locations when having a cut
-		from camera to camera. A final constraint is that the object should not scale too much. The
-		tracker can deal with some scaling but the tracker patch does not grow or shrink when the object
-		gets scaled. The evaluation criterion is simple: for each video and for each color space, we test
+		occluded during tracking, since the tracker cannot handle this properly in our implementation.
+		Another important constraint to the videos is that there should not be any cuts to different
+		cameras in the movie when tracking the object. Since mean-shift tracks the object from frame
+		to frame, it cannot handle tracking objects that appear in totally different locations due
+		to such cuts. A final constraint is that the object should not scale too much. The tracker
+		can deal with some scaling but the tracker patch does not grow or shrink when the object gets
+		scaled. The evaluation criterion is simple: for each video and for each color-space, we test
 		whether it is possible to track a certain object for the entire sequence of frames.
 		\begin{table}[H]
 			\centering
 			\begin{tabular}{| l | l | l | l | l | l | l |}
 			\hline
-			             & frames & RGB & rgb & OCS & HSV & Hue \\
+			              & frames & RGB & rgb & OCS & HSV & Hue \\
 			\hline
-			Formula 1 (1)&  97 & 1   & 1   & 0   & 0   & 1 \\
-			Formula 1 (2)& 215 & 1   & 0   & 0   & 0   & 0 \\
-			Formula 1 (3)& 123 & 0   & 0   & 0   & 0   & 1 \\
-			Formula 1 (4)& 222 & 0   & 0   & 0   & 0   & 1 \\
-			Formula 1 (5)& 164 & 1   & 0   & 0   & 1   & 1 \\
+			Formula 1 (1) &  97    & 1   & 1   & 0   & 0   & 1 \\
+			Formula 1 (2) & 215    & 1   & 0   & 0   & 0   & 0 \\
+			Formula 1 (3) & 123    & 0   & 0   & 0   & 0   & 1 \\
+			Formula 1 (4) & 222    & 0   & 0   & 0   & 0   & 1 \\
+			Formula 1 (5) & 164    & 1   & 0   & 0   & 1   & 1 \\
 			\hline
 			\end{tabular}
-			\caption{Formula one results}
+			\caption{Formula-One results}
 			\label{table:f1}
 		\end{table}
 		\begin{table}[H]
@@ -486,30 +351,56 @@
 			\label{table:soc}
 		\end{table}
 		\noindent
-		The sporting domain gives us a more controlled environment for tracking. Formula $1$ is set on
+		The sporting domain gives us a more controlled environment for tracking. Formula-One is set on
 		grey roads with green grass surrounding it, making it possible to track racecars with certain
 		color schemes fairly easy. Tracking in the soccer domain also benefits from the environment of
 		the players and their clothing. However, the controlled environment can also be of negative
-		influence. For example, when tracking a Formula 1 car we observe that using only the hue gives
-		the best tracking results in general. But problems are encountered when using hue if the target model consists of white-like colors. Because of complications in illumination or video compression, these white-like colors can contain colors from their surroundings therefore giving them hue-values closer to the surrounding colors. This can result in objects completely dissapearing in the hue channel as shown in figure \ref{fig:HUE}. The usage of all three components from HSV can solve some of these issues as more information is preserved.
+		influence. For example, when tracking a Formula-One car we observe that using only the hue gives
+		the best tracking results in general. But problems are encountered when using hue if the target
+		model consists of white-like colors. Because of complications in illumination or video compression,
+		these white-like colors can contain colors from their surroundings therefore giving them hue-values
+		closer to the surrounding colors. This can result in objects completely dissapearing in the hue channel
+		as shown in figure \ref{fig:HUE}. The usage of all three components from HSV can solve some of these
+		issues as more information is preserved.
 		\begin{figure}[H]
 			\begin{center}
 				\includegraphics[width=5cm]{img/example_hue1.eps}
 				\includegraphics[width=5cm]{img/example_hue2.eps}\\
 			\end{center}
-			\caption{Example of the weaknes of hue: white players dissapear in hue channel}
+			\caption{
+				An example of the weakness of the Hue-only model.
+				White players disappear in the hue-channel.
+			}
 			\label{fig:HUE}
 		\end{figure}
-				
+		\noindent
 		The urban domain gives a more challenging environment since we can expect about anything in the
-		scenery. Illumination, shadow, clutter and about any color is present, as well as spatial issues like occlusion and changing appearances. For this domain we chose walking people and free-running people (an urban sport). Because of the huge variety in features the tracking results are much more dependent on the color spaces. In table \ref{table:ped} results on the urban environment are listed. We observe that for every sequence of frames, the tracking could only succeed for a single (or at most two) color space(s). The usage of full color spaces instead of only one component for hue or two components for normalized rgb is to be expected since they preserve more information on the target model. A particularly challenging problem was found in the experiment of the Pedestrian-Walk (1) sequence. The person walks in front of glass windows with high reflectance and a pile of stones of all kinds of colors. This resulted in the tracker getting lost most of the time for all color spaces because the window and the pile of stones contain all colors of the target model. The only way to solve this in our implementation is to be very precise when selecting a target model. Another interesting observation and a perfect example for the importance of color-space selection was made on the Pedestrian-FreeRun (1) sequence. Here, 3 out of 5 color spaces failed immediatly, and the hue had issues keeping track of the movement of the freerunner. The OCS color space however worked perfectly because of the clothing of the person (see figure \ref{fig:FREE}). 
+		scenery. Illumination, shadow, clutter and about any color is present, as well as spatial issues
+		like occlusion and changing appearances. For this domain we chose walking people and free-running
+		people (an urban sport). Because of the huge variety in features the tracking results are much more
+		dependent on the color-spaces. In table \ref{table:ped} results on the urban environment are listed.
+		We observe that for every sequence of frames, the tracking could only succeed for a single (or at
+		most two) color-space(s). The usage of full color-spaces instead of only one component for hue or
+		two components for normalized rgb is to be expected since they preserve more information on the
+		target model. A particularly challenging problem was found in the experiment of the Pedestrian-Walk
+		(1) sequence. The person walks in front of glass windows with high reflectance and a pile of stones
+		of all kinds of colors. This resulted in the tracker getting lost most of the time for all color
+		spaces because the window and the pile of stones contain all colors of the target model. The only
+		way to solve this in our implementation is to be very precise when selecting a target model. Another
+		interesting observation and a perfect example for the importance of color-space selection was made
+		on the Pedestrian-FreeRun (1) sequence. Here, $3$ out of $5$ color-spaces failed immediatly, and the
+		hue-only model had issues keeping track of the movement of the freerunner. The OCS color-system
+		however worked perfectly because of the clothing of the person (see figure \ref{fig:FREE}). 
 		\begin{figure}[H]
 			\begin{center}
 				\includegraphics[width=5cm]{img/example_free1.eps}
 				\includegraphics[width=5cm]{img/example_free2.eps}
 				\includegraphics[width=5cm]{img/example_free3.eps}\\
 			\end{center}
-			\caption{Example of color-space selection. From left to right, top to bottom: RGB, OCS and hue}
+			\caption{
+				Example of color-space selection. From left to
+				right, top to bottom: RGB, OCS and Hue-only.
+			}
 			\label{fig:FREE}
 		\end{figure}
 		
@@ -527,12 +418,19 @@
 			Pedestrian-FreeRun (3)& 387 & 0   & 0   & 0   & 0   & 0 \\
 			\hline
 			\end{tabular}
-			\caption{Urban environment results}
+			\caption{Urban-Environment results}
 			\label{table:ped}
 		\end{table}
-		
-		Our final domain of nature is also a domain with a huge variety of features similar to those of the urban environment where we chose hunting cheetahs and fishes in coral to run experiments on. The best performing color space on this domain is HSV. The Fish (1) sequence failed for all color-spaces because of the coral being camouflage for the type of fish, and the other fish sequences performed very well because of the distinctive color the fish has. The running cheetah was also camouflaged by its environment. But with the target model consisting of few features of the cheetah (black spots and some white fur), without the interference of shadows or lightspots it could be tracked using the HSV color space. See figure \ref{fig:RESULTS} for final results of the tracker. 
-		
+		\noindent
+		Our final domain of nature is also a domain with a huge variety of features similar to
+		those of the urban environment where we chose hunting cheetahs and fishes in coral to
+		run experiments on. The best performing color-system in this domain is HSV. The Fish (1)
+		sequence failed for all color-spaces because of the coral being camouflage for the type
+		of fish, and the other fish sequences performed very well because of the distinctive color
+		the fish has. The running cheetah was also camouflaged by its environment. But with the
+		target model consisting of few features of the cheetah (black spots and some white fur),
+		without the interference of shadows or lightspots it could be tracked using the HSV color
+		space. See figure \ref{fig:RESULTS} for final results of the tracker. 
 		\begin{table}[H]
 			\centering
 			\begin{tabular}{ | l | l | l | l | l | l | l |}
@@ -547,11 +445,10 @@
 			Cheetah (3)& 105   & 0   & 0   & 0   & 1   & 1 \\
 			\hline
 			\end{tabular}
-			\caption{Nature environment results}
+			\caption{Nature-Environment results}
 			\label{table:an}
 		\end{table}
 		\noindent
-		
 		\begin{figure}[H]
 			\begin{center}
 				\includegraphics[width=6cm]{img/res_animal2_hsv.eps} 
@@ -560,37 +457,44 @@
 				\includegraphics[width=6cm]{img/res_walk1_hsv.eps}\\
 			\end{center}
 			\caption{
-				Final results from the mean-shift tracker. The green line describes the path the tracker has travelled on the screen, and in case of a static camera, it also describes the path of the object during the sequence.
+				Final results from the mean-shift tracker. The green line describes the path
+				the tracker has travelled on the screen, and in case of a static camera, it
+				also describes the path of the object during the sequence.
 			}
 			\label{fig:RESULTS}
 		\end{figure}
 
 	\section{Conclusion}
-		Overall, the tracker performed well on the domains whenever the target object is distinctive with respect to the environment and if this is the case, it can handle occlusion very well. 
-		
-		
-		!!!!!!!!!!!!!TODO: can u fill this up plz
-		
-		
-		
+		We have built and tested a mean-shift tracking system inspired by the work of
+		\cite{KBOT}. Overall, this tracker performs well regardless of the interest
+		domain whenever the target-object is distinctive with respect to its local
+		environment and if this is the case, it can also handle occlusion very well. 
+		However, in other situtations, the limitations of a tracker of this nature
+		become apparent: following a blob of pixels without high-level reasoning
+		about the semantics of these pixels cannot be made sufficiently robust
+		against general object transformation. This problem is exacerbated further if
+		the chosen color-system reduces the distinction between object and background
+		pixels. It might be advantageous to determine the optical flow between frames
+		via eg. Lucas-Kanade and integrate this information into the tracker so as to
+		decouple the mean-shift estimate from the color-system.
+
 	\section{Future Work}
 		We have several suggestions for extending the tracker skeleton.
-
 		\begin{itemize}
-		\item{
-			\emph{Scale-invariance}: this could be accomplished by computing the
-			Epanechnikov kernel for various scales and selecting the appropriate
-			scale each frame by means of the Bhattacharyya distance.
-		}
-		\item{
-			\emph{Color-space selection}: it should be possible to perform some
-			variance analysis on the target histogram and determine which color
-			space is best suited for the object model.
-		}
-		\item{
-			\emph{Spatial discrimination}: dividing the kernel into several parts
-			to store spatial information could make the tracker more discriminative.
-		}
+			\item{
+				\emph{Scale-invariance}: this could be accomplished by computing the
+				Epanechnikov kernel for various scales and selecting the appropriate
+				scale each frame by means of the Bhattacharyya distance.
+			}
+			\item{
+				\emph{Color-space selection}: it should be possible to perform some
+				variance analysis on the target histogram and determine which color
+				space is best suited for the object model.
+			}
+			\item{
+				\emph{Spatial discrimination}: dividing the kernel into several parts
+				to store spatial information could make the tracker more discriminative.
+			}
 		\end{itemize}
 
 	\begin{thebibliography}{2}
@@ -601,26 +505,3 @@
 	\end{thebibliography}
 
 \end{document}
-
-
-
-
-
-
-
-
-
-% je hebt een color space en zo'n domein als sport
-% waarom werkt normalized RGB zo fijn op voetbal
-%  Jasper:  en kan 't problemen opleveren bij een grijze achtergrond
-% met grijze achtergrond bedoel ik dan f1 wegdek
-%  Jasper:  en urban environments zijn erg lastig
-% daarom wil je over 't algemeen zoveel mogelijk informatie van de target model opslaan
-% daarom werken in die filmpjes hsv en RGB volgens mij 't beste
-%  me:  wat ik wel kan zeggen zijn dingen als "in domains where large diffuse surfaces dominate, normalized RGB works well because of blablabla"
-%  Jasper:  dat is zoiezo een inkoppertje
-% maar we moeten de zwaktes ook aanstippen dus
-%  me:  daar heb ik dus niet goed zicht op ;)
-%  Jasper:  en dan met name dus over zaken waar geen enkele color space iets mee kan
-% www.youtube.com/watch?v=_RviOAIqRyk
-% www.youtube.com/watch?v=qgdimzQaTG8
